@@ -1,6 +1,6 @@
 package com.epay.transaction.repository.cache;
 
-import com.epay.transaction.dto.TransDownApiDto;
+import com.epay.transaction.dto.DowntimeAPIDto;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hazelcast.core.HazelcastInstance;
 import com.sbi.epay.hazelcast.service.HazelcastService;
@@ -9,12 +9,11 @@ import com.sbi.epay.logging.utility.LoggerUtility;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 /**
- * Class Name: TransDownApiCacheRepository
+ * Class Name: DowntimeAPICacheRepository
  * *
  * Description: This class represents record(s) related to transaction downtime apis from cache.
  * *
@@ -27,9 +26,9 @@ import java.util.Optional;
 
 @Component
 @AllArgsConstructor
-public class TransDownApiCacheRepository {
-    private final LoggerUtility logger = LoggerFactoryUtility.getLogger(TransDownApiCacheRepository.class);
+public class DowntimeAPICacheRepository {
     private static final String DOWNTIME_API_MAP = "downtime_details";
+    private final LoggerUtility logger = LoggerFactoryUtility.getLogger(DowntimeAPICacheRepository.class);
     private final HazelcastService hazelcastService;
     private final HazelcastInstance hazelcastInstance;
     private final ObjectMapper objectMapper;
@@ -40,16 +39,9 @@ public class TransDownApiCacheRepository {
      * @param status as string
      * @return list of downtime apis.
      */
-    public Optional<List<TransDownApiDto>> getDowntimeApiDetails(String status) {
+    public Optional<List<DowntimeAPIDto>> getDowntimeAPIs(String status) {
+        logger.debug("getDowntimeAPIs : status {}", status);
         //TODO: Currently setting downtime list as empty because cache is not implemented, will be removed try-catch after cache implementation.
-        try{
-            return Optional.of(List.of(objectMapper.convertValue(hazelcastService.getDataBySql(DOWNTIME_API_MAP, "__status like" + status, hazelcastInstance)
-                    .getCacheableEntityData(), TransDownApiDto.class)));
-        } catch (RuntimeException e) {
-            logger.error("Error -> :",e);
-           return Optional.of(Collections.emptyList());
-        }
-
-
+        return Optional.of(List.of(objectMapper.convertValue(hazelcastService.getDataBySql(DOWNTIME_API_MAP, "__status like" + status, hazelcastInstance).getCacheableEntityData(), DowntimeAPIDto.class)));
     }
 }
